bk_ida/gccida/g1/make_tree
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4510:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4512:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4513:5: error: expected ';' after expression
tree v8; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4513:6: error: use of undeclared identifier 'v8'
tree v8; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4514:5: error: expected ';' after expression
tree v9; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4514:6: error: use of undeclared identifier 'v9'
tree v9; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4515:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4516:5: error: expected ';' after expression
tree v11; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4516:6: error: use of undeclared identifier 'v11'; did you mean 'v10'?
tree v11; // r12 
     ^~~
     v10
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4515:12: note: 'v10' declared here
tree_node *v10; // rax 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4517:5: error: expected ';' after expression
tree v12; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4517:6: error: use of undeclared identifier 'v12'; did you mean 'v10'?
tree v12; // rax 
     ^~~
     v10
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4515:12: note: 'v10' declared here
tree_node *v10; // rax 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4518:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4519:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4520:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4521:5: error: expected ';' after expression
tree v16; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4521:6: error: use of undeclared identifier 'v16'
tree v16; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4522:5: error: expected ';' after expression
tree v17; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4522:6: error: use of undeclared identifier 'v17'
tree v17; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/expmed.c:4523:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_tree/src/obj/expmed.o] Error 1
